--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.7.2",
     "browser-image-compression": "^2.0.2",
     "jimp": "^1.6.0",
-    "next": "14.2.5",
+    "next": "^14.2.33",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.34.5",
@@ -24,7 +24,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^16.0.4",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7"
   }
